--- a/maiss-website-code/package.json
+++ b/maiss-website-code/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "dom": "^0.0.3",
+    "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
